# CLG

./: Cargo.toml  LICENSE  README.md  SETUP.md
src/: main.rs  parsing.rs  run.rs
src/commands/: cat.rs  cp.rs  cut.rs  date.rs  dirname.rs  echo.rs  file.rs  getconf.rs  ls.rs  mkdir.rs  mod.rs  rm.rs  rmdir.rs  sleep.rs  wc.rs
src/gambling/: coinflip.rs  gamble_result.rs  machine.rs  mod.rs  utils.rs
src/gambling/ascii_art/: mod.rs
src/gambling/ascii_art/coin/: _credits.txt  back.txt  head.txt  side.txt  side2.ansi  tails.txt
src/gambling/ascii_art/coin/old/: front.txt  side.txt
src/gambling/ascii_art/numbers/: _credits.txt  eight.txt  five.txt  nine.txt  one.txt  seven.txt  six.txt  three.txt  two.txt  unknown.txt  zero.txt
src/parsing/: mod.rs
