[package]
name = "clg"
version = "0.1.0"
edition = "2024"
authors = ["Jonathan Schmittat"]
publish = false

[dependencies]
crossterm="0.29.0"
color-eyre="0.6.5"
rand="0.9.2"

[dependencies.chrono]
version = "0.4.41"
default-features = false
features = ["clock"]

[dependencies.clap]
version = "4.5.42"
default-features = false
features = ["derive","help","std"]

[dependencies.mime_more]
version = "0.1.7"
features = ["magic","extension"]

[dependencies.mime_guess]
version = "2.0.5"

[dependencies.ratatui]
version = "0.29.0"
features = ["all-widgets"]

[dependencies.fastrand]
version="2.3.0"
