[package]
name = "clgambling"
version = "0.1.0"
edition = "2024"
authors = ["Jonathan Schmittat"]
description = "A CLI tool where you need to gamble in order to do something"
repository = "https://github.com/HQ2000-Rust/CLG"
readme = true
#clg because that's the original name
keywords = ["CLI","clg","gambling","POSIX"]
categories = ["command-line-utilities", "games"]
license="MIT"


[dependencies]
crossterm="0.29.0"
color-eyre="0.6.5"

[dependencies.chrono]
version = "0.4.41"
default-features = false
features = ["clock"]

[dependencies.clap]
version = "4.5.43"
default-features = false
features = ["derive","help","std"]

[dependencies.mime_more]
version = "0.1.7"
features = ["magic","extension"]

[dependencies.mime_guess]
version = "2.0.5"

[dependencies.ratatui]
version = "0.29.0"
features = ["all-widgets"]

[dependencies.fastrand]
version="2.3.0"

[dependencies.ansi-to-tui]
version = "7.0.0"

[profile.release]
overflow-checks = false
